--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 license = "Apache-2.0"
 homepage = "https://github.com/deep-ink-ventures/hookpoints-cli"
 repository = "https://github.com/deep-ink-ventures/hookpoints-cli"
-readme = "https://github.com/deep-ink-ventures/hookpoints-cli/blob/main/README.md"
+readme = "README.md"
 keywords = ["substrate", "blockchain", "hookpoints", "cli", "ink!", "pallet"]
 categories = ["command-line-utilities", "development-tools", "blockchain"]
 
